<resources>
    <string name="app_name">Flashcards</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_action_edit">Edit</string>
    <string name="menu_add_package_save">Save</string>
    <string name="menu_add_card_save">Save</string>
    <string name="menu_action_run_slide_show">Slide show</string>
    <string name="menu_action_share">Share</string>

    <string name="menu_action_delete">Delete</string>
    <string name="menu_action_delete_message_pre">Are you sure you want to delete</string>
    <string name="menu_action_delete_packages_title">Delete packages?</string>
    <string name="menu_action_delete_cards_packages_message_post_singular">package with all the cards in it?</string>
    <string name="menu_action_delete_cards_packages_message_post_plural">packages with all the cards in them?</string>
    <string name="menu_action_delete_cards_message_post_singular">card?</string>
    <string name="menu_action_delete_cards_message_post_plural">cards?</string>

    <string name="menu_action_delete_symbols_packages_message_post_singular">package with all the symbols in it?</string>
    <string name="menu_action_delete_symbols_packages_message_post_plural">packages with all the symbols in them?</string>
    <string name="menu_action_delete_symbols_message_post_singular">symbol?</string>
    <string name="menu_action_delete_symbols_message_post_plural">symbols?</string>

    <string name="menu_action_delete_button_yes">Yes</string>
    <string name="menu_action_delete_button_no">No</string>

    <string name="activity_add_card_title">Add card</string>
    <string name="activity_add_package_title">Add package</string>
    <string name="activity_slide_show_title">Slide Show</string>

    <string name="edit_card_name_hint">Name</string>
    <string name="edit_card_front_hint">Front</string>
    <string name="edit_card_back_hint">Back</string>

    <string name="add_cards_package_name_hint">Name</string>
    <string name="add_package_color_hint">Color</string>
    <string name="add_package_label">Add package</string>

    <string name="add_card_label">Add card</string>

    <string name="statistics_title">Total</string>
    <string name="statistics_memorized_label">Memorized:</string>
    <string name="statistics_delimiter">/</string>

    <string name="card_overlay_right_desc">Memorized</string>
    <string name="card_overlay_left_desc">Unmemorized</string>
    <string name="editable_list_view_drawer_cards">Cards</string>
    <string name="editable_list_view_drawer_symbols">Symbols</string>
    <string name="editable_list_view_drawer_settings">Settings</string>
    <string name="add_symbols_package_name_hint">Name</string>
    <string name="add_symbol_hint">Symbol</string>
    <string name="add_symbols_package_title">Add package</string>
    <string name="add_symbol_title">Add symbol</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_symbol_message">Are you sure you want to delete the symbol?</string>
    <string name="symbols_title">Symbols</string>
    <string name="example_cards_package_title">This is a package</string>
    <string name="example_card_name">This is a card</string>
    <string name="example_card_front"><![CDATA[<h1 style=\"text-align: center; \" center;=\"\"><font face=\"Open Sans\" neue=\"\">Front side</font></h1><h4 style=\"text-align: center; \" center;=\"\"><font face=\"Open Sans\" neue=\"\" color=\"#6ba54a\">(click on me)</font></h4><h4 style=\"text-align:\" center;=\"\"><font face=\"Open Sans\" neue=\"\" color=\"#6ba54a\"><br></font></h4><p style=\"text-align: center; \" center;=\"\"><font color=\"#e76363\" face=\"Open Sans=\"\"><span style=\"font-size: 36px;\" 36px;=\"\">&lt;3</span></font></p>]]></string>
    <string name="example_card_back"><![CDATA[<h1 style=\"text-align: center; \" center;=\"\"><font neue=\"\" face=\"Merriweather\">Back side</font></h1><hr><p style=\"text-align: center; \" right;=\"\"><font neue=\"\" face=\"Merriweather\">I did my best :3</font></p><p style=\"text-align:\" center;=\"\" right;=\"\"><img src=\"file:///android_asset/img_cat.jpg\" style=\"float: none; width: 100%;\" 100%;=\"\"></p>]]></string>
    <string name="example_symbols_math_title">Math</string>
    <string name="example_symbols_math_symbols">⇒→⇔∧∨¬∀∃|∅∈∉⊆⊂⊇⊃∪⋂ℕℤℚℝℂ≈≤≥√∞∑∏∫∂↦°αβγδεζηθικλμνξοπρσςτυφχψωΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩ</string>
    <string name="example_symbols_chem_title">Chem</string>
    <string name="example_symbols_chem_symbols">⁰¹²³⁴⁵⁶⁷⁸⁹₁₂₃₄₅₆₇₈₉</string>
    <string name="error_enter_the_name">Please, enter the name</string>
    <string name="error_card_already_exists">A card with this name already exists. Please, try another one</string>
    <string name="error_package_already_exists">A package with this name already exists. Please, try another one</string>
    <string name="title_edit">Edit</string>
    <string name="add_package_card_alpha_hint">Cards color</string>
    <string name="image_pick_permissions">Approve permissions to pick image</string>
</resources>
