<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/ic_view_carousel_24dp"
            android:title="@string/editable_list_view_drawer_cards" />
        <item
            android:id="@+id/nav_symbols"
            android:icon="@drawable/ic_translate_24dp"
            android:title="@string/editable_list_view_drawer_symbols" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/editable_list_view_drawer_settings" />
    </group>

</menu>
