<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".slideshow.SlideShowStatisticsFragment">

    <ImageView
        android:id="@+id/bg_memorized"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tint="@color/colorPrimaryLight"
        android:src="@drawable/rectangle_slide_show_bg"
        android:contentDescription="@string/slideshow_bg_statistics_desc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/font_size"
        android:textColor="@android:color/black"
        android:paddingTop="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/statistics_title" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size"
            android:textColor="@android:color/black"
            android:paddingTop="64dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/statistics_memorized_label" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/statistics_memorized"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size"
                android:textColor="@android:color/black"
                android:paddingTop="64dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size"
                android:textColor="@android:color/black"
                android:paddingTop="64dp"
                android:text="@string/statistics_delimiter" />

            <TextView
                android:id="@+id/statistics_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size"
                android:textColor="@android:color/black"
                android:paddingTop="64dp" />

        </LinearLayout>

    </FrameLayout>

</FrameLayout>